# CTA-minikube

./: README.md  restart-all-download-image.sh  restart-all.sh
CTA/EOSCTATAPE/: etc-sysconfig-eos_env  post-install-various-instructions.txt
CTA/LTO_RAO/LTO/: LTO-physical-position.sh  check-each-file-position.sh
CTA/LTO_RAO/LTO/LTO-4/: LTO4.ppt  LTO4.ppt.txt
CTA/LTO_RAO/LTO/LTO-7M/: 50-blocks-skip  LTO-7M-L70010-skip-rewind-25-blocks-0-50000.txt  LTO-7M-L70010-skip-rewind-50-blocks-0-100000.txt  LTO-7M-L70010-skip-rewind.txt  a  add-wrap-track-direction-using-seek  german-LTO7-tapes-to-scan.txt
CTA/LTO_RAO/LTO/LTO-8/: LTO-8-L80011-skip-rewind.txt  a  add-wrap-track-direction-using-rewind  check  check-each-file-position.sh
CTA/LTO_RAO/LTO/physmapfiles/: README.txt
CTA/LTO_RAO/R/: LTO-7M-positioning.Rmd  compute-position-cost  tape-verify
CTA/LTO_RAO/doc/: 00_Intro.txt  01_LTO_Experiences_at_CERN.txt  03_Vlado.txt
CTA/continuousintegration/buildtree_runner/: generate_librarydevice_PV.sh  prepareImageStage1-rpms-local.sh  prepareImageStage1-rpms-public.sh  prepareImageStage1-rpms.sh  prepareImageStage2-eos.sh  prepareImageStage2b-scripts.sh  prepareImageStage3-scripts.sh  recreate_buildtree_running_environment.sh
CTA/continuousintegration/orchestration/: create_instance.sh  objectstore-file.yaml  pod-ctacli.yaml  pod-ctaeos.yaml  pod-ctafrontend.yaml  pod-init.yaml  pod-tpsrv.yaml  pod-tpsrv01.yaml  pod-tpsrv02.yaml
CTA/continuousintegration/orchestration/tests/: systest.sh
CTA/cta-release/: RPM-GPG-KEY-storageci
CTA/doc/: .gitignore  CTA_security.pptx  README.md
CTA/doc/CASTOR/: CMakeLists.txt  CTA_Request_workflow.tex  Makefile
CTA/doc/ConferencePapers/CHEP2016/: CHEP_2016_paper_CTA.tex  CTA_architecture_A4.pptx  CTA_consolidated_deployment.pptx  CTA_current_deployment.pptx  CTA_drop_in_replacement_deployment.pptx  generate_pdf.sh
CTA/doc/ConferencePapers/CHEP2018/: CHEP2018_CTA.bib  CHEP2018_CTA.tex  Makefile
CTA/doc/ConferencePapers/CHEP2019/: .gitignore  CHEP2019_CTA.bib  CHEP2019_CTA.tex  Makefile
CTA/doc/DevelopmentNotes/20180118_Program_of_Work/: EOSTAPE_archival.rtf  EOSTAPE_retrieval.rtf
CTA/doc/DevelopmentNotes/20181210_IT_Meeting/: CTA_QUESTIONS_AND_ANSWERS.docx
CTA/doc/DevelopmentNotes/LHCb/: Makefile  cta20180820.tex  gfal.tex  lhcb+cta.cls  lhcb20180704.tex  lhcb20180808.tex  lhcb20180817.tex
CTA/doc/DevelopmentNotes/PostgresQL/: CTA_postgreSQL_tasks_Feb_2019_v2.docx
CTA/doc/Presentations/20160118_Storage_Development_Workshop/: CTA_-_CERN_CASTOR_Tape_Archive_Rationale_and_Status.pptx
CTA/doc/Presentations/20170208_GDB/: GDB_meeting_08_Feb_2017_CTA.pptx
CTA/doc/Presentations/20170516_CASTOR_Face_to_Face/: CASTOR_face_to_face_CTA_part_2_May_16_2017.pptx
CTA/doc/Presentations/20171019_HEPiX/: Makefile  OutlookForArchivalStorageAtCERN_MichaelDavis.bib  OutlookForArchivalStorageAtCERN_MichaelDavis.tex
CTA/doc/Presentations/20180118_Program_of_Work/: cta_program_of_work.ppt
CTA/doc/Presentations/20181029_CMS_Offline_Software_And_Operations/: CMSOfflineSoftwareAndOperations_CTATransitionFromCASTOR.pptx
CTA/doc/Presentations/20181210_IT_Meeting/: CTA_Technical_Presentation.pptx
CTA/doc/Presentations/20191003_STFC_CTA_evaluation/: CTADatabaseSTFC03102019.pptx  CTATapeLibrarySupportSTFC03102019.pptx
CTA/doc/Presentations/20191029_HEPiX/: HEPiXAutumn2019TitleAndAbstract.txt  TapeHEPiXAutumn2019.pptx
CTA/doc/images/: CTA_Arch.vsdx  CTA_Concepts_Diagram.vsdx  CTA_Queues.pptx  CTA_tape_session_states.pptx
CTA/doc/latex/: EOSCTA.tex  Makefile  README.md  The_Tape_Storage_Element.tex  archiveRequestSeqDiag.tex  cta.cls  cta.tex  cta_Authorization.tex  cta_BasicConcepts.tex  cta_Glossary.tex  cta_Introduction.tex  cta_ObjectStore.tex  cta_TapeFormat.tex  cta_TapeSessions.tex  getNextArchivalSeqDiag.tex  getNextRetrievalSeqDiag.tex  queueRequestSeqDiags.tex  retrieveRequestSeqDiag.tex
CTA/migration/: CMakeLists.txt  README.md  cta-catalogue-initialise.sh  cta-catalogue-remove-castor-tapes.py  cta_catalogue_remove_castor_migration.sql  oracle_catalogue_castor_migration.sql  oracle_catalogue_import_only_tape_files.sql
CTA/migration/castor/: CMakeLists.txt  begin_vo_export_to_cta.sh  castor_tools.py  castorns_build_dirsfullpath.sql  castorns_ctamigration_schema.sql  castorvmgr_ctamigration_schema.sql  complete_cta_export.py  dlf.py  export_production_tapepool_to_cta.sh  tapepool_castor_to_cta.py  vmgr_reenable_tapepool.sh  zerolen_castor_to_cta.py
CTA/migration/castor/tests/: create_castor_ns_schema.sql  create_castor_vmgr_schema.sql  drop_castor_ns_schema.sql  drop_castor_vmgr_schema.sql
CTA/migration/gRPC/: CMakeLists.txt  EosImportDirs.cpp  EosImportDirs.hpp  EosImportDirsCmd.cpp  EosImportFiles.cpp  EosImportFiles.hpp  EosImportFilesCmd.cpp  EosTestDirInject.cpp  EosTestFileInject.cpp  GrpcUtilsTest.cpp  castor-migration.conf.example  json-pretty-print.sh
CTA/objectstore/: BackendVFS.cpp  BackendVFS.hpp  SorterTest.cpp
CTA/xrootd-ssi-protobuf-interface/: CMakeLists.txt  README.md
CTA/xrootd-ssi-protobuf-interface/eos_cta/include/: CtaFrontendApi.hpp
CTA/xrootd-ssi-protobuf-interface/eos_cta/protobuf/: cta_admin.proto
CTA/xrootd-ssi-protobuf-interface/include/: README.md  XrdSsiPbAlert.hpp  XrdSsiPbConfig.hpp  XrdSsiPbException.hpp  XrdSsiPbIStreamBuffer.hpp  XrdSsiPbLog.hpp  XrdSsiPbOStreamBuffer.hpp  XrdSsiPbRequest.hpp  XrdSsiPbRequestProc.hpp  XrdSsiPbService.hpp  XrdSsiPbServiceClientSide.hpp
CTA/xrootd-ssi-protobuf-interface/test/etc/: xrd.cf.test
CTA/xrootd-ssi-protobuf-interface/test/include/: TestApi.hpp
CTA/xrootd-ssi-protobuf-interface/test/protobuf/: CMakeLists.txt  test.proto
CTA/xrootd-ssi-protobuf-interface/test/src/: CMakeLists.txt  TestClient.cpp  TestClient.hpp  TestRequestProc.cpp  TestServiceProvider.cpp  TestServiceProvider.hpp  TestStream.hpp  TestThreads.cpp
minikube-files/: README.md
minikube-files/cta_rpms/: README.md
nfs/: README.md  bootstrap-nfs.sh  nfs-pv.yaml  nfs-pvc.yaml  nfs-server-rc.yaml  nfs-server-service.yaml
nfs/provisioner/: local.yaml
(+210 files in other folders)
